--- a/guides.html
+++ b/guides.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Loan Assistance Tool / Walkthrough Module / Guides </title>
+    <title>Loan Assistance Tool / Guides </title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -22,9 +22,9 @@
 
 <body>
 
-    <!-- ======= Header ======= -->
+      <!-- ======= Header ======= -->
 
-    <header class="main-header" role="banner" aria-label="Page Header">
+      <header class="main-header" role="banner" aria-label="Page Header">
         <!--wrapper for main header used to hide on print-->
         <div class="head-main">
             <a href="#main-content" class="skip-nav" role="navigation" aria-label="Skip to Main Content">            Skip to main content        </a>
@@ -70,8 +70,8 @@
                     <div class="agency-banner">
                         <div class="agency-logo">
                             <span class="agency-logo">
-              <img id="block-farmers-update-branding--2" class=" ls-is-cached lazyloaded" loading="lazy" src="/images/usda-symbol.svg" alt="USDA Logo">
-            </span>
+                              <img id="block-farmers-update-branding--2" class=" ls-is-cached lazyloaded" loading="lazy" src="/images/usda-symbol.svg" alt="USDA Logo">
+                            </span>
                             <a class="agency-logo-text" href="/" aria-label="Farm Service Agency - U.S. DEPARTMENT OF AGRICULTURE Farm Loan Walkthrough">
                                 <div class="agency-identity">
                                     <div class="agency-name">Farm Service Agency</div>
@@ -83,6 +83,12 @@
                     </div>
                     <div class="utility-nav">
                         <ul class="usa-unstyled-list utility-nav-links usa-nav-secondary-links">
+                            <li>
+                                <a href="https://www.fsa.usda.gov/about-fsa/index">About FSA</a>
+                            </li>
+                            <li>
+                                <a href="https://ask.usda.gov/s/">Ask USDA</a>
+                            </li>
                             <li>
                                 <a href="https://www.fsa.usda.gov/contact-us">Contact Us</a>
                             </li>
@@ -107,7 +113,7 @@
                                     </a>
                                 </li>
                                 <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
-                                    <a href="/guides.html" class="page-link mm-active" data-label="/guides.html" aria-label="Go to Guides Page" data-category="Guides">
+                                    <a href="/guides.html" class="page-link" data-label="/guides.html" aria-label="Go to Guides Page" data-category="Guides">
                                         <div class="mm-nav-link">
                                             <div class="mm-top-level-title">Guides</div>
                                         </div>
@@ -121,7 +127,7 @@
                                     </a>
                                 </li>
                                 <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
-                                    <a id="loanDiscovery" href="/lrt.html?discovery" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
+                                    <a id="loanDiscovery" href="/lrt.html?discovery" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Discovery Tool" data-category="Readiness">
                                         <div class="mm-nav-link">
                                             <div class="mm-top-level-title">Loan Discovery</div>
                                         </div>
@@ -129,7 +135,7 @@
                                 </li>
                                 <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:walkthrough" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Walkthrough"
                                     aria-level="1">
-                                    <a href="/walkthrough.html" class="page-link" data-label="/walkthrough.html" aria-label="Go to Walkthrough Page" data-category="Loans">
+                                    <a href="/walkthrough.html" class="page-link" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">
                                         <div class="mm-nav-link">
                                             <div class="mm-top-level-title">Form Support</div>
                                         </div>
@@ -140,17 +146,17 @@
                     </div>
                     <div id="search-field">
                         <form class="search" action="walkthrough.html" data-drupal-form-fields="affiliate,header-search">
-                        <div role="search" aria-label="Site Search">
-                            <input name="utf8" type="hidden" value="✓">
-                            <input id="affiliatename" name="affiliate" type="hidden" value="Application Forms">
-                            <label class="usa-sr-only" for="header-search">Search Application Forms</label>
-                            <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search Application Forms" tabindex="0">
-                            <button type="submit" tabindex="0">    
-            <span class="usa-sr-only">Search</span>
-          </button>
-                            <input name="commit" type="hidden" value="Search">
-                        </div>
-                    </form>
+                            <div role="search" aria-label="Site Search">
+                                <input name="utf8" type="hidden" value="✓">
+                                <input id="affiliatename" name="affiliate" type="hidden" value="Application Forms">
+                                <label class="usa-sr-only" for="header-search">Search Application Forms</label>
+                                <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search Application Forms" tabindex="0">
+                                <button type="submit" tabindex="0">    
+                                    <span class="usa-sr-only">Search</span>
+                                </button>
+                                <input name="commit" type="hidden" value="Search">
+                            </div>
+                        </form>
                     </div>
                 </div>
             </nav>
@@ -161,24 +167,24 @@
                         <div class="mm-mobile-menu-close">
                             <span>close</span>
                         </div>
+                        <!-- <div class="mm-signup">
+                            <span class="utility-nav-buttons">    
+                                <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">        LOG IN | SIGN UP    </a>
+                            </span>
+                        </div> -->
                         <div class="mm-top-section-container">
-                            <div class="mm-signup">
-                                <span class="utility-nav-buttons">    
-                                    <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">        LOG IN | SIGN UP    </a>
-                                </span>
-                            </div>
                             <div class="mm-search">
                                 <div id="search-field-mobile">
-                                    <form class="search" action="[ SITE SEARCH URL ]" data-drupal-form-fields="affiliate,header-search">
+                                    <form class="search" action="walkthrough.html" data-drupal-form-fields="affiliate,header-search">
                                         <div role="search" aria-label="Mobile Site Search">
                                             <input name="utf8" type="hidden" value="✓">
-                                            <input id="affiliatename-mobile" name="affiliate" type="hidden" value="[ SITE DOMAIN ]">
-                                            <label class="usa-sr-only" for="header-search-mobile">Search [ SITE DOMAIN ]</label>
-                                            <input id="header-search-mobile" autocomplete="off" name="query" type="search" placeholder="Search [ SITE DOMAIN ]" tabindex="0">
+                                            <input id="affiliatename-mobile" name="affiliate" type="hidden" value="Application Form Search">
+                                            <label class="usa-sr-only" for="header-search-mobile">Search Application Forms</label>
+                                            <input id="header-search-mobile" autocomplete="off" name="query" type="search" placeholder="Search Application Forms" tabindex="0">
                                             <button type="submit" tabindex="0">                
-                                              <span class="usa-sr-only">Search</span>            
+                                            <span class="usa-sr-only">Search</span>            
                                             </button>
-                                            <input name="commit" type="hidden" value="Search">
+                                           <input name="commit" type="hidden" value="Search">
                                         </div>
                                     </form>
                                 </div>
@@ -188,23 +194,10 @@
                                 <a class="mm-mobile-top-nav home" href="/guides.html">Guides</a>
                                 <a class="mm-mobile-top-nav home" href="/lrt.html">Eligibility Assessment</a>
                                 <a class="mm-mobile-top-nav home" href="/lrt.html?discovery">Loan Discovery</a>
-                                <a class="mm-mobile-top-nav home" href="/walkthrough.html">Form Support</a>
+                                <a class="mm-mobile-top-nav home" href="/workthrough.html">Form Support</a>
                             </div>
                         </div>
                         <div class="mm-utility-nav">
-                            <ul class="mm-branding-bar-menu">
-                                <li>
-                                    <a href="#">Branding Bar Nav</a>
-                                    <span class="seperator">|</span>
-                                </li>
-                                <li>
-                                    <a href="#">Branding Bar Nav</a>
-                                    <span class="seperator">|</span>
-                                </li>
-                                <li>
-                                    <a href="#">Branding Bar Nav</a>
-                                </li>
-                            </ul>
                             <ul class="usa-unstyled-list utility-nav-links usa-nav-secondary-links">
                                 <li>
                                     <a href="/coronavirus/pandemic-assistance" title="USDA is dedicated to reaching a broad set of producers and agricultural businesses through our Pandemic Assistance for Producers initiative. " aria-label="Pandemic Assistance" tabindex="0" data-drupal-link-system-path="node/29151">Pandemic Assistance</a>
@@ -219,9 +212,9 @@
                                     <a href="https://www.usda.gov" aria-label="USDA.gov" tabindex="0">USDA.gov</a>
                                 </li>
                             </ul>
-                            <span class="utility-nav-buttons">
+                            <!-- <span class="utility-nav-buttons">
                               <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">    LOG IN | SIGN UP</a>
-                            </span>
+                            </span> -->
                         </div>
                     </div>
                 </div>
