--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Loan Assistance Tool / Walkthrough Module / Home </title>
+    <title>Loan Assistance Tool / Home </title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -83,7 +83,13 @@
                     </div>
                     <div class="utility-nav">
                         <ul class="usa-unstyled-list utility-nav-links usa-nav-secondary-links">
-                             <li>
+                            <li>
+                                <a href="https://www.fsa.usda.gov/about-fsa/index">About FSA</a>
+                            </li>
+                            <li>
+                                <a href="https://ask.usda.gov/s/">Ask USDA</a>
+                            </li>
+                            <li>
                                 <a href="https://www.fsa.usda.gov/contact-us">Contact Us</a>
                             </li>
                             <li>
