Corrected missing char

--- a/walkthrough.html
+++ b/walkthrough.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    !-- ======= Header ======= -->
+    <!-- ======= Header ======= -->
 
 <header class="main-header" role="banner" aria-label="Page Header">
     <!--wrapper for main header used to hide on print-->
