loan discovery issue fixed

--- a/lrt.html
+++ b/lrt.html
@@ -121,14 +121,14 @@
                                 </a>
                             </li>
                             <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
-                                <a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
+                                    <a id="loanEligibility" href="/lrt.html" class="page-link mm-active" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
                                     <div class="mm-nav-link">
                                         <div class="mm-top-level-title">Eligibility Assessment</div>
                                     </div>
                                 </a>
                             </li>
                             <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
-                                <a id="loanDiscovery" href="/lrt.html?discovery" class="page-link" data-label="/lrt.html?discovery" aria-label="Go to the Loan Discovery Tool" data-category="Readiness">
+                                    <a id="loanDiscovery" href="/lrt.html?discovery" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Discovery Tool" data-category="Readiness">
                                     <div class="mm-nav-link">
                                         <div class="mm-top-level-title">Loan Discovery</div>
                                     </div>
@@ -264,7 +264,7 @@
                             <li><a href="/" aria-label="Go to Home Page" class="is-active"><span>Home</span></a></li>
                             <li><a href="/guides.html" class="page-link" data-label="/guides.html" aria-label="Go to Guides Page" data-category="Guides">Guides</a></li>
                             <li><a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">Eligibility Assessment</a></li>
-                            <li><a id="loanDiscovery" href="/lrt.html?discovery" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Discovery Tool" data-category="Readiness">Loan Discovery</a></li>
+                            <li><a href="/lrt.html?discovery" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Discovery Tool" data-category="Readiness">Loan Discovery</a></li>
                             <li><a href="/walkthrough.html" class="page-link" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">Form Support</a></li>
                         </ul>
                     </nav>
