Fixed Loan Discovery Link and homepage redesign

--- a/index.html
+++ b/index.html
@@ -248,10 +248,12 @@
 
     <div class="container page">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div class="content-card accent-top h-100">
-                    <img src="/images/zoomph.jpg" class="card-img-top" alt="Get Started">
+                    <img src="/images/52241358485_3d9cbbc84f_o.jpg" class="card-img-top" alt="Get Started">
+                    <div class="spacer">&nbsp;</div>
                     <h3 class="card-header">Start your journey with FSA</h3>
+                    <div class="spacer">&nbsp;</div>
                     <div class="card-body">
                         <ul>
                             <li>Am I eligible for an FSA Farm Loan?</li>
@@ -259,21 +261,15 @@
                             <li>Where can I get  help completing the loan application forms?</li>
                         </ul>
                     </div>
+                    <div class="spacer">&nbsp;</div>
                     <a href="lrt.html" style="text-decoration: none;">
                         <div class="card-footer btn-start">
                             Get Started
                         </div>
                     </a>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="content-card accent-top h-100">
-                    <iframe height="440px" width="100%" src="https://www.youtube.com/embed/dPfq0DrkUSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <h3 class="card-header">FSA Farm Loans</h3>
-                    <div class="card-body">
-                        <p class="card-text">Watch the short video above. Then, click Get Started to see if you are eligible.</p>
-                    </div>
+                    <div class="spacer">&nbsp;</div>
                     <div class="divider-line"></div>
+                    <div class="spacer">&nbsp;</div>
                     <h3 class="card-header">Additional Resources</h3>
                     <div class="spacer">&nbsp;</div>
 
@@ -282,7 +278,6 @@
                                 <li><a class="text-link" href="walkthrough.html">Form Support</a></li>
                                 <li><a class="text-link" href="guides.html">Read The Guides</a></li>
                             </ul>
-
                     </div>
                 </div>
             </div>
