--- a/lrt.html
+++ b/lrt.html
@@ -28,7 +28,9 @@
 <header class="main-header" role="banner" aria-label="Page Header">
     <!--wrapper for main header used to hide on print-->
     <div class="head-main">
-        <a href="#main-content" class="skip-nav" role="navigation" aria-label="Skip to Main Content">            Skip to main content        </a>
+        <a href="#main-content" class="skip-nav" role="navigation" aria-label="Skip to Main Content">
+            Skip to main content
+        </a>
         <!--Skip to Main Content-->
         <div class="usa-banner" id="usa-gov-web-banner">
             <div class="usa-accordion">
