--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
                                     <a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
                                         <div class="mm-nav-link">
-                                            <div class="mm-top-level-title">Eligibility Assessment</div>
+                                            <div class="mm-top-level-title">Eligibility Self-Assessment</div>
                                         </div>
                                     </a>
                                 </li>
@@ -239,7 +239,7 @@
         <div class="row">
             <div class="primary-region medium-12">
                 <h1 class="primary-region__title">
-                    Are your ready to apply for a farm loan?
+                    Are you ready to apply for a farm loan?
 
                 </h1>
             </div>
@@ -256,7 +256,7 @@
                     <div class="spacer">&nbsp;</div>
                     <div class="card-body">
                         <ul>
-                            <li>Am I eligible for an FSA Farm Loan?</li>
+                            <li>Am I eligible for a FSA Farm Loan?</li>
                             <li>Which loans are right for me?</li>
                             <li>Where can I get  help completing the loan application forms?</li>
                         </ul>
