--- a/form.html
+++ b/form.html
@@ -126,7 +126,7 @@
                                 <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
                                     <a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
                                         <div class="mm-nav-link">
-                                            <div class="mm-top-level-title">Eligibility Assessment</div>
+                                            <div class="mm-top-level-title">Eligibility Self-Assessment</div>
                                         </div>
                                     </a>
                                 </li>
