--- a/guides.html
+++ b/guides.html
@@ -122,7 +122,7 @@
                                 <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
                                     <a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
                                         <div class="mm-nav-link">
-                                            <div class="mm-top-level-title">Eligibility Assessment</div>
+                                            <div class="mm-top-level-title">Eligibility Self-Assessment</div>
                                         </div>
                                     </a>
                                 </li>
@@ -237,7 +237,7 @@
             <div class="row">
                 <div class="primary-region medium-12">
                     <h1 class="primary-region__title">
-                        Learn About Our FSA Farm Loan Programs
+                        Learn About FSA Farm Loan Programs
                     </h1>
                 </div>
             </div>
@@ -269,9 +269,12 @@
                       </div>
                       <div class="content">
                         <p>
-                          This booklet is for anyone who is seeking an FSA farm loan. It provides an overview of the USDA Farm Service Agency's Farm programs, loan types, eligibility requirements, and the application process.
+                          This booklet is for anyone who is seeking a FSA farm loan. It provides an overview of the USDA Farm Service Agency's Farm programs, loan types, eligibility requirements, and the application process.
                         </p>
-                      </div>                  
+                      </div>
+                      <div class="headline mb-5">
+                        <h3><a class="text-link" href="/guides/your_guide_to_farm_loans_spanish.pdf" download>Descarga en Español </a></h3>
+                      </div>                
                     </div>
                 </div>
                 <div class="col">
@@ -284,6 +287,9 @@
                           This guide is for recipients of FSA farm loans. It clarifies the partnership between FSA and the loan recipient and outlines the responsibilities of both parties.
                         </p>
                       </div>                  
+                      <div class="headline mb-5">
+                        <h3><a class="text-link" href="/guides/fsa_farm__loan_compass_spanish.pdf" download>Descarga en Español </a></h3>
+                      </div>
                     </div>
                 </div>
             </div>
@@ -440,7 +446,7 @@
         (function() {
 
             // Show Guide List
-            $.getJSON("/forms/guides.json", function(data) {
+            $.getJSON("/guides/guides.json", function(data) {
                 var links = [];
                 $.each(data["Guides"], function(key, guide) {
                     links.push(`<a class='text-link show-pdf' data-file-name='${guide["file_name"]}' data-title='${guide["name"]}' data-desc='${guide["description"]}' id='guide-${key}'>${guide["name"]}</a>`)
