Changing homepage to match new design

--- a/lrt.html
+++ b/lrt.html
@@ -19,13 +19,14 @@
     <link href="./css/stepper.css" rel="stylesheet" />
     <link href="./css/lrt.css" rel="stylesheet" />
     <link href="css/walkthrough.css" rel="stylesheet">
+    <link rel="stylesheet" media="all" href="css/newHome.css" />
 
 </head>
 
 <body>
 <!-- ======= Header ======= -->
 
-<header class="main-header" role="banner" aria-label="Page Header">
+<header class="main-header " role="banner" aria-label="Page Header">
     <!--wrapper for main header used to hide on print-->
     <div class="head-main">
         <a href="#main-content" class="skip-nav" role="navigation" aria-label="Skip to Main Content">
@@ -233,7 +234,7 @@
 
 
 <!-- End Header -->
-    <main id="main-content">
+    <main id="main-content backgroundNew">
 
         <div class="container page">
             <div class="row">
