--- a/walkthrough.html
+++ b/walkthrough.html
@@ -246,8 +246,7 @@
             <div class="farmers-landing-page row">
                 <div class="primary-region medium-12">
                     <div class="primary-region__header">
-                        <p>Below are the forms used to apply for for a farm loan. You may needs to fill many of them to complete your application. Please select a form to start the walk tough process. Yoiu may comepolet the form as you gpt though this process.
-                            You may download the each form to your computers at any point to save your progress and resume working on it later. Please note:</p>
+                        <p>Below are the forms used to apply for a farm loan. You may need to fill many of them to complete your application. Please select a form to start the walk though process. You may complete the form as you get through this process. You may download each form to your computers at any point to save your progress and resume working on it later. Please note:</p>
 
                         <ul>
                             <li>The forms can <strong>only</strong> be saved to your computer;</li>
