--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" media="all" href="css/styles.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="css/walkthrough.css" rel="stylesheet">
-
+    <link rel="stylesheet" media="all" href="css/newHome.css" />
 </head>
 
 <body>
@@ -233,56 +233,45 @@
 
 
 
-    <main id="main-content">
+    <main id="main-content" class="backgroundHero">
 
-    <div class="container">
-        <div class="row">
-            <div class="primary-region medium-12">
-                <h1 class="primary-region__title">
-                    Are you ready to apply for a farm loan?
-
-                </h1>
+    <div class="card"> 
+        <div class="container">
+            <div class="row">
+                <div class="primary-region medium-12">
+                    <h1 class="primary-region__title">
+                        Are you ready to apply for a farm loan?
+                    </h1>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="container page">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="content-card accent-top h-100">
-                    <img src="/images/52241358485_3d9cbbc84f_o.jpg" class="card-img-top" alt="Get Started">
-                    <div class="spacer">&nbsp;</div>
-                    <h3 class="card-header">Start your journey with FSA</h3>
-                    <div class="spacer">&nbsp;</div>
-                    <div class="card-body">
-                        <ul>
-                            <li>Am I eligible for a FSA Farm Loan?</li>
-                            <li>Which loans are right for me?</li>
-                            <li>Where can I get  help completing the loan application forms?</li>
-                        </ul>
-                    </div>
-                    <div class="spacer">&nbsp;</div>
-                    <a href="lrt.html" style="text-decoration: none;">
-                        <div class="card-footer btn-start">
-                            Get Started
-                        </div>
-                    </a>
-                    <div class="spacer">&nbsp;</div>
-                    <div class="divider-line"></div>
-                    <div class="spacer">&nbsp;</div>
-                    <h3 class="card-header">Additional Resources</h3>
-                    <div class="spacer">&nbsp;</div>
-
-                    <div class="card-body">
+        <div class="container">
+            <div class="row ">
+                <div class="col-md-12">
+                    <div class="content-card accent-top h-100">
+                        <div class="spacer">&nbsp;</div>
+                        <h3 class="">Welcome</h3>
+                        <h3 class="">Start your journey with FSA</h3>
+                        <div class="spacer">&nbsp;</div>
+                        <div class="card-body">
                             <ul>
-                                <li><a class="text-link" href="walkthrough.html">Form Support</a></li>
-                                <li><a class="text-link" href="guides.html">Read The Guides</a></li>
+                                <li>Am I eligible for a FSA Farm Loan?</li>
+                                <li>Which loans are right for me?</li>
+                                <li>Where can I get  help completing the loan application forms?</li>
                             </ul>
+                        </div>
+                        <div class="spacer">&nbsp;</div>
+                        <a href="lrt.html" style="text-decoration: none;">
+                            <div class="btn-start">
+                                Get Started
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div>   
     <div class="spacer">&nbsp;</div>
     </main>
 
