--- a/form.html
+++ b/form.html
@@ -255,7 +255,7 @@
             <div class="divider-line"></div>
         </div>
 
-        <div class="container page">
+        <div class="container">
 
             <div class="row" style="margin-bottom:15px;">
 
