--- a/lrt.html
+++ b/lrt.html
@@ -236,7 +236,7 @@
 <!-- End Header -->
     <main id="main-content backgroundNew">
 
-        <div class="container page">
+        <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <section class="mdl-stepper">
