--- a/walkthrough.html
+++ b/walkthrough.html
@@ -246,20 +246,29 @@
             <div class="farmers-landing-page row">
                 <div class="primary-region medium-12">
                     <div class="primary-region__header">
-                        <p>Below are the forms used to apply for a farm loan. You may need to fill many of them to complete your application. Please select a form to start the walk though process. You may complete the form as you get through this process. You may download each form to your computers at any point to save your progress and resume working on it later. Please note:</p>
-
+                        <p>
+                            Using the Form Support module, you can walk through each FSA form field by field and get instructions on how to complete it. To begin the form walkthrough process, please select one of the below forms. 
+                        </p>
+                        <p>
+                            For a list of the forms required for your loan type, please refer to the checklist for your loan type from the Loan Discovery module.
+                        </p>
+                        <p>
+                            Forms can be filled out online and downloaded to a local machine for printing. However, please note:
+                        </p>
                         <ul>
-                            <li>The forms can <strong>only</strong> be saved to your computer;</li>
-                            <li><strong>At no point in this process is any information saved to, or shared with USDA staff or systems</strong>; and</li>
-                            <li>You care encouraged to reach out to your <a href="https://www.farmers.gov/working-with-us/service-center-locator" target="_blank">Local Service Center</a> if you have any further questions or concerns.</li>
+                            <li>It is not possible to save your work online. Currently, you are only able to save forms by downloading them to your local machine as PDFs;</li>
+                            <li>This process does not save or submit any information online; and</li>
+                            <li>Completed applications must be printed out and sent to your <a href="https://offices.sc.egov.usda.gov/locator/app?state=us&agency=fsa" target="_blank">Local Service Center</a> if you have any further questions or concerns.</li>
                         </ul>
-
+                        <p>
+                            Any further questions or concerns should be directed to your  <a href="https://offices.sc.egov.usda.gov/locator/app?state=us&agency=fsa" target="_blank">Local Service Center</a>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="container">
+<div class="container">
             <div class="divider-line"></div>
         </div>
 
