--- a/walkthrough.html
+++ b/walkthrough.html
@@ -231,7 +231,6 @@
 <!-- End Header -->
 
     <main id="main-content">
-
         <div class="container">
             <div class="row">
                 <div class="primary-region medium-12">
@@ -261,7 +260,7 @@
                             <li>Completed applications must be printed out and sent to your <a href="https://offices.sc.egov.usda.gov/locator/app?state=us&agency=fsa" target="_blank">Local Service Center</a> if you have any further questions or concerns.</li>
                         </ul>
                         <p>
-                            Any further questions or concerns should be directed to your  <a href="https://offices.sc.egov.usda.gov/locator/app?state=us&agency=fsa" target="_blank">Local Service Center</a>
+                            Any further questions or concerns should be directed to your  <a href="https://offices.sc.egov.usda.gov/locator/app?state=us&agency=fsa" target="_blank">Local Service Center</a>.
                         </p>
                     </div>
                 </div>
