trying to remove text effects
shadow stroke and color change need to be removed from btn lg-btn styles

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         </div>
                         <div class="spacer">&nbsp;</div>
                         <a href="lrt.html" style="text-decoration: none;">
-                            <div class="btn-start">
+                            <div class="btn lg-btn">
                                 Get Started
                             </div>
                         </a>
