Added ver meta in index adn fixed fotter menu

--- a/lrt.html
+++ b/lrt.html
@@ -266,7 +266,7 @@
                         <ul>
                             <li><a href="/" aria-label="Go to Home Page" class="is-active"><span>Home</span></a></li>
                             <li><a href="/guides.html" class="page-link" data-label="/guides.html" aria-label="Go to Guides Page" data-category="Guides">Guides</a></li>
-                            <li><a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">Eligibility Assessment</a></li>
+                            <li><a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">Eligibility Self-Assessment</a></li>
                             <li><a href="/lrt.html?discovery" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Discovery Tool" data-category="Readiness">Loan Discovery</a></li>
                             <li><a href="/walkthrough.html" class="page-link" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">Form Support</a></li>
                         </ul>
