--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta ver="1.0.4">
+    <meta ver="1.0.5">
 
 
     <title>Loan Assistance Tool / Home </title>
@@ -242,7 +242,7 @@
             <div class="row">
                 <div class="primary-region medium-12">
                     <h1 class="primary-region__title">
-                        Are you ready to apply for a farm loan?
+                        Loan Assistance Tool
                     </h1>
                 </div>
             </div>
@@ -250,7 +250,7 @@
             <div class="row ">
                 <div class="col-md-12">
                     <div class="content-card accent-top">
-                        <h3 class="card-title">Start your journey with FSA</h3>
+                        <h3 class="card-title">Are you ready to apply for a farm loan?</h3>
                         <div class="card-body">
                             <ul>
                                 <li>Am I eligible for a FSA Farm Loan?</li>
